tests/ui/layout/invalid-unsized-in-always-sized-tail.stderr
error[E0277]: the size for values of type `[bool]` cannot be known at compilation time
  --> $DIR/invalid-unsized-in-always-sized-tail.rs:11:8
   |
LL |     b: MySliceBool,
   |        ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[bool]`
note: required by an implicit `Sized` bound in `MySlice`
  --> $DIR/invalid-unsized-in-always-sized-tail.rs:7:16
   |
LL | struct MySlice<T>(T);
   |                ^ required by the implicit `Sized` requirement on this type parameter in `MySlice`
help: you could relax the implicit `Sized` bound on `T` if it were used through indirection like `&T` or `Box<T>`
  --> $DIR/invalid-unsized-in-always-sized-tail.rs:7:16
   |
LL | struct MySlice<T>(T);
   |                ^  - ...if indirection were used here: `Box<T>`
   |                |
   |                this could be changed to `T: ?Sized`...

error[E0080]: the type `MySlice<[bool]>` has an unknown layout
  --> $DIR/invalid-unsized-in-always-sized-tail.rs:15:28
   |
LL | static CHECK: () = assert!(align_of::<P2>() == 1);
   |                            ^^^^^^^^^^^^^^^^ evaluation of `CHECK` failed inside this call
   |
note: inside `align_of::<P2>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0277.
For more information about an error, try `rustc --explain E0080`.
